fix card wrap

--- a/frontend/src/pages/Help/help.css
+++ b/frontend/src/pages/Help/help.css
@@ -1,8 +1,12 @@
 .helpPage {
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 30px;
-  justify-content: start;
-  justify-items: center;
+  width: 100vw;
+  padding-top: 30px;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  overflow-y: auto;
+  align-items: flex-start;
+  overflow-y: auto;
 }
